# edx-code

./: Cargo.toml  LICENSE  README.md  main.py
client/: .gitignore  package.json
client/app/: layout.tsx  page.tsx
client/components/: circular-spinner.tsx  navbar.tsx  providers.tsx  theme-toggle.tsx
client/components/editor/: index.tsx
client/pkg/: LICENSE  edx_code.d.ts  edx_code.js  edx_code_bg.js  edx_code_bg.wasm  edx_code_bg.wasm.d.ts  package.json
examples/: array.edx  array.py  countcontrolled.edx  foreachloop.edx  forloop.edx  function.edx  iftest.edx  iotest.edx  postconditioned.edx  proc.edx  runtimeerror.edx  stdlib.edx  stdlib.py  stringswithmixedquotes.edx  stringswithmixedquotes.py  test1.edx  test1.py  test2.edx  test2b.edx  test3.edx  tictactoe.edx  tictactoe.py  var.edx  whileloop.edx
src/: error.rs  lib.rs  main.rs  parser.rs  runtime.rs  stdlib.rs  tokenizer.rs  transpiler.rs
