[package]
authors = ["Md Riyasat Hossain <TheCodeHeist>"]
name = "edx-code"
description = "A fun interpreter for the Pearson Edexcel Pseudocode language, written in Rust and compiled to WebAssembly for use in web applications."
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/TheCodeHeist/edx-code"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "edxrun"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.10.0"
thiserror = "2.0.18"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
